[metadata]
name = eth-bb
version = 0.0.1
description = Builletin board signaller for unidirectional content
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://holbrook.no/src/eth-bb/log.html
keywords =
	dlt
	blockchain
	cryptocurrency
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Topic :: Software Development :: Libraries
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	Topic :: Internet
#	Topic :: Blockchain :: EVM
license = AGPLv3+
licence_files =
	LICENSE

[options]
include_package_data = True
python_requires = >= 3.8
packages =
	eth_bb
	eth_bb.cli
	eth_bb.data
	eth_bb.render
	eth_bb.runnable

[options.entry_points]
console_scripts =
	eth-bb-put = eth_bb.runnable.put:main
	eth-bb-get = eth_bb.runnable.get:main
